--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@mui/x-date-pickers": "^8.25.0",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.19",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.69.0",
