--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^8.25.0",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.10.0",
+    "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.19",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
