--- a/package.json
+++ b/package.json
@@ -20,15 +20,22 @@
     "axios": "^1.10.0",
     "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.19",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.69.0",
+    "react-i18next": "^16.5.3",
+    "stylis": "^4.3.6",
+    "stylis-plugin-rtl": "^2.1.1",
     "zod": "^4.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/stylis": "^4.2.7",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
